--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "esModuleInterop": true,
         "moduleResolution": "NodeNext",
         "outDir": "./dist",
-        "module": "NodeNext"
+        "module": "NodeNext",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true
     },
     "exclude": ["dist/", "node_modules"],
     "include": ["src/**/*.ts", "index.ts"]
